--- a/vis/src/App.css
+++ b/vis/src/App.css
@@ -31,22 +31,6 @@
   gap: 3rem;
 }
 
-.logo {
-  color: white;
-  font-size: 1.5rem;
-  font-weight: 800;
-  display: flex;
-  align-items: center;
-  position: relative;
-  flex-direction: row;
-  gap: .1rem;
-}
-
-.logo span:nth-of-type(1) {
-  font-size: 2.5rem;
-  color: #ffffff40;
-}
-
 .search {
   flex: 1;
   display: flex;
@@ -152,7 +136,7 @@
 }
 
 .filter span {
-  color: #606060;
+  color: var(--clr-fg);
 }
 
 .clusters {
