--- a/docs/src/vars.styl
+++ b/docs/src/vars.styl
@@ -9,6 +9,7 @@ clrAccent ?= #ff0000
 fontRegular = 'Source Sans Pro', sans-serif
 fontMono = 'Ubuntu Mono', monospace
 
+gapXXLarge = 64px;
 gapLarge = 32px;
 gapMedium = 16px;
 gapSmall = 8px;
