--- a/docs/src/App.styl
+++ b/docs/src/App.styl
@@ -16,26 +16,22 @@ body
   font-family: fontRegular;
 
 main
-  flexColumn()
+  flexColumn(gapLarge)
   justify-content: flex-start;
   align-items: center;
-  gap: gapLarge;
   header
     width: 100vw;
-    height: 40vh;
-    display: flex;
-    flex-direction: column;
+    flexColumn(gapLarge);
     justify-content: center;
     align-items: center;
     background-color: clrHeaderBg;
-    gap: gapLarge;
+    padding: gapXXLarge;
     color: clrHeaderFg;
     boxShadowStrong()
 
     .logo
-      flexRow()
+      flexRow(1ch)
       align-items: flex-end;
-      gap: 1ch;
       span:nth-of-type(1)
         font-size: 2.5rem;
         font-weight: 400;
@@ -47,8 +43,7 @@ main
         font-size: 2.5rem;
 
     .links
-      flexRow()
-      gap: gapMedium;
+      flexRow(gapMedium);
       a
         padding: gapSmall gapMedium;
         color: clrHeaderFg;
@@ -59,11 +54,10 @@ main
         &:hover
           background-color: lighten(clrHeaderBg, 15);
   section
-    flexColumn()
+    flexColumn(gapMedium)
     max-width: sectionMaxWidth;
     min-width: sectionMinWidth;
     width: 80vw;
-    gap: gapMedium;
     ul
       flexColumn()
       flex: 1;
