--- a/docs/src/index.styl
+++ b/docs/src/index.styl
@@ -1,4 +1,4 @@
-:root {
+:root
   color-scheme: light dark;
 
   font-synthesis: none;
@@ -14,15 +14,12 @@
   --clr-fg: #242424;
   --clr-card-bg: #39393A;
   --clr-card-fg: #E6E6E6;
-}
 
-@media (prefers-color-scheme: light) {
-  :root {
+@media (prefers-color-scheme: light)
+  :root
     --clr-header-bg: #4b8493;
     --clr-header-fg: #f9f5f1;
     --clr-bg: #fcfaf2;
     --clr-fg: #242424;
     --clr-card-bg: #39393A;
     --clr-card-fg: #E6E6E6;
-  }
-}
