docs: restyle links

--- a/docs/src/App.styl
+++ b/docs/src/App.styl
@@ -63,13 +63,12 @@ main
       flex: 1;
     li
       display: flex;
-      color: clrCardFg;
-      background-color: clrCardBg;
+      color: clrFg;
       transition: background-color transRegular;
-      &:hover 
-        background-color: clrCardBg;
+      &:hover a
+        color: clrHeaderBg;
       a
         flex: 1;
-        text-decoration: none;
-        color: clrCardFg;
+        text-decoration: underline;
+        color: clrFg;
         padding: gapMedium;
