docs: add icons

--- a/docs/src/App.styl
+++ b/docs/src/App.styl
@@ -51,6 +51,10 @@ main
         background-color: lighten(clrHeaderBg, 10);
         border-radius: borderRadiusMedium;
         transition: background-color transRegular;
+        svg
+          margin-right: gapMedium;
+          width: 18px;
+          height: 18px;
         &:hover
           background-color: lighten(clrHeaderBg, 15);
   section
