--- a/vis/src/components/Cluster.css
+++ b/vis/src/components/Cluster.css
@@ -49,7 +49,7 @@
     "icon also"
   ;
   place-content: start;
-  place-items: baseline;
+  place-items: start;
   /* color: rgb(63, 130, 63); */
 }
 
