--- a/vis/src/components/Logo.scss
+++ b/vis/src/components/Logo.scss
@@ -7,9 +7,9 @@
   position: relative;
   flex-direction: row;
   gap: .1rem;
-}
 
-.logo span:nth-of-type(1) {
-  font-size: 2.5rem;
-  color: #ffffff40;
+  span:nth-of-type(1) {
+    font-size: 2.5rem;
+    color: #ffffff40;
+  }
 }
