--- a/vis/src/index.scss
+++ b/vis/src/index.scss
@@ -57,9 +57,10 @@ a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+
+  &:hover {
+    color: #535bf2;
+  }
 }
 
 body {
@@ -80,12 +81,13 @@ button {
   font-weight: 500;
   cursor: pointer;
   transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+  &:hover {
+    border-color: #646cff;
+  }
+
+  &, &:focus, &:focus-visible {
+    outline: 4px auto -webkit-focus-ring-color;
+  }
 }
 
