--- a/vis/src/index.scss
+++ b/vis/src/index.scss
@@ -86,7 +86,7 @@ button {
     border-color: #646cff;
   }
 
-  &, &:focus, &:focus-visible {
+  &:focus, &:focus-visible {
     outline: 4px auto -webkit-focus-ring-color;
   }
 }
