--- a/vis/src/App.scss
+++ b/vis/src/App.scss
@@ -49,6 +49,7 @@
       
       &::placeholder {
         color: white;
+        opacity: 0.8;
       }
       &:focus {
         background-color: rgba(255, 255, 255, 0.25);
