--- a/vis/src/components/Cluster.scss
+++ b/vis/src/components/Cluster.scss
@@ -23,6 +23,23 @@
     "names files"
   ;
   grid-template-columns: 1fr 2fr;
+  position: relative;
+
+  .tooltip {
+    position: absolute;
+    color: white;
+    top: .5rem;
+    left: .5rem;
+    background-color: gray;
+    font-size: 0.75rem;
+    padding: .25rem .5rem;
+    border-radius: 4px;
+    opacity: 0;
+
+    &.visible {
+      opacity: 1;
+    }
+  }
 
   h3 {
     color: var(--clr-card-title-fg);
@@ -32,7 +49,7 @@
     grid-area: title;
     display: grid;
     flex-direction: row;
-    column-gap: 2rem;
+    column-gap: 1rem;
     grid-template:
       "icon title"
       "icon also"
