--- a/vis/src/components/Cluster/Cluster.scss
+++ b/vis/src/components/Cluster/Cluster.scss
@@ -20,7 +20,6 @@
     "title title"
     "properties files"
     "properties files"
-    "names files"
   ;
   grid-template-columns: 1fr 2fr;
   position: relative;
@@ -52,7 +51,7 @@
     column-gap: 1rem;
     grid-template:
       "icon title"
-      "icon also"
+      "also also"
     ;
     place-content: start;
     place-items: start;
@@ -64,7 +63,7 @@
       align-self: center;
     }
   
-    &>span {
+    .candidate-type {
       grid-area: icon;
       font-size: 2rem;
       font-weight: 800;
