--- a/vis/src/index.scss
+++ b/vis/src/index.scss
@@ -28,7 +28,7 @@
 
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   :root {
     --clr-bg: #E6E6E6;
     --clr-fg: #213547;
