--- a/vis/src/components/Filters.scss
+++ b/vis/src/components/Filters.scss
@@ -27,7 +27,7 @@
           text-decoration: underline;
         }
         &.selected {
-          background-color: white;
+          background-color: var(--clr-card-bg);
           box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
           // box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
           // color: white;
