--- a/vis/src/components/IncDecInput/IncDecInput.scss
+++ b/vis/src/components/IncDecInput/IncDecInput.scss
@@ -18,6 +18,7 @@
     background-color: var(--clr-btn-primary-bg);
     color: var(--clr-btn-primary-fg);
     border-radius: 100vw;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
     border: none;
     width: 32px;
     height: 32px;
