--- a/vis/src/components/Cluster/FunctionalCluster.scss
+++ b/vis/src/components/Cluster/FunctionalCluster.scss
@@ -1,6 +1,22 @@
 .return-type {
-  position: absolute;
-  right: 2rem;
+  grid-area: return-type;
   font-weight: 600;
   font-size: 1rem;
+  display: flex;
+  flex-direction: column;
+  span {
+    margin-top: 1rem;
+    margin-left: 1rem;
+    color: var(--clr-code-value);
+  }
+}
+
+.cluster-functional {
+  grid-template-areas:
+    "title title"
+    "return-type files"
+    "properties files"
+    "properties files"
+  ;
+  grid-template-columns: 1fr 2fr;
 }
