--- a/vis/src/components/Navbar/Navbar.scss
+++ b/vis/src/components/Navbar/Navbar.scss
@@ -8,20 +8,20 @@
   align-items: center;
   gap: 3rem;
   padding: 12px 3rem;
-  /* background-color: #297373; */
+  background-color: var(--clr-header-bg);
   /* background-image: linear-gradient(to right top, #297373, #276d6d, #246666, #226060, #205a5a); */
-  background-image: linear-gradient(to left bottom, #297373, #276d6d, #246666, #226060, #205a5a);
+  // background-image: linear-gradient(to left bottom, #297373, #276d6d, #246666, #226060, #205a5a);
   /* background-image: linear-gradient(to right top, #1b4b4b, #1c4f4f, #1e5252, #1f5656, #205a5a); */
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
-  .left {
-    display: flex;
-    flex: 1;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 3rem;
-  }
+  // .left {
+  //   display: flex;
+  //   flex: 1;
+  //   flex-direction: row;
+  //   justify-content: flex-start;
+  //   align-items: center;
+  //   gap: 3rem;
+  // }
 
   .search {
     flex: 1;
