--- a/docs/src/App.styl
+++ b/docs/src/App.styl
@@ -29,19 +29,6 @@ main
     color: clrHeaderFg;
     boxShadowStrong()
 
-    .logo
-      flexRow(1ch)
-      align-items: flex-end;
-      span:nth-of-type(1)
-        font-size: 2.5rem;
-        font-weight: 400;
-        padding: 1.5rem 0.8rem 0rem 1.5rem;
-        border-radius: 10%;
-        background-color: darken(clrHeaderBg, 20);
-        boxShadowMedium()
-      span:nth-of-type(2)
-        font-size: 2.5rem;
-
     .links
       flexRow(gapMedium);
       a
@@ -62,6 +49,10 @@ main
     max-width: sectionMaxWidth;
     min-width: sectionMinWidth;
     width: 80vw;
+    &.bleed
+      max-width: 100vw;
+      width: 100vw;
+      margin: 0;
     ul
       flexColumn()
       flex: 1;
