--- a/vis/src/components/Cluster/FileListing.scss
+++ b/vis/src/components/Cluster/FileListing.scss
@@ -14,8 +14,17 @@
   .file {
     cursor: pointer;
 
+    display: flex;
+    flex-direction: row;
+    gap: 1ch;
+
+    .path {
+      flex: 1;
+    }
+
     &:hover {
       background-color: rgb(0, 0, 0, 0.1);
     }
+
   }
 }
