--- a/docs/src/vars.styl
+++ b/docs/src/vars.styl
@@ -18,5 +18,22 @@ borderRadiusSmall = 4px;
 borderRadiusMedium = 8px;
 borderRadiusLarge = 16px;
 
-sectionMinWidth = 320px
-sectionMaxWidth = 700px
+sectionMinWidth = 320px;
+sectionMaxWidth = 700px;
+
+$darkMode = true;
+
+$appIconRed = #ed614e;
+$appIconYellow = #e0b443;
+$appIconGreen = #54cc78;
+
+$red = #f26f7a;
+$purple = #b481f0;
+$yellow = #fcd86d;
+$orange = #eba652;
+$green = #53a372;
+$white = #c8c8c8;
+$gray = #606060;
+$grayLight = #a0a0a0;
+$blue = #6cbdf0;
+$blueDark = #4b83bf;
