--- a/docs/src/components/Snippet.styl
+++ b/docs/src/components/Snippet.styl
@@ -1,23 +1,34 @@
 @import "../utils.styl"
 @import "../vars.styl"
 
-$bgColor = #22272e;
-$headerColor = darken($bgColor, 5);
+// $codeBg = #22272e;
+// $codeFg = white;
+// $headerColor = darken($codeBg, 5);
 
-$red = #f26f7a;
-$purple = #b481f0;
-$yellow = #fcd86d;
-$orange = #eba652;
-$white = #c8c8c8;
-$gray = #606060;
-$blue = #6cbdf0;
+$codeBg = var(--clr-codeBg);
+$codeFg = var(--clr-codeFg);
+$boxShadow = var(--clr-boxShadow);
+$codeCommentsFg = var(--clr-codeCommentsFg);
+
+$headerColor = $codeBg;
 
 .snippet
+  &.light
+    --clr-codeBg: white;
+    --clr-codeFg: black;
+    --clr-boxShadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    --clr-codeCommentsFg: $grayLight;
+  &.dark
+    --clr-codeBg: #22272e;
+    --clr-codeFg: white;
+    --clr-boxShadow: rgba(0, 0, 0, 0.15) 0px 13px 27px -5px, rgba(0, 0, 0, 0.25) 0px 8px 16px -8px;
+    --clr-codeCommentsFg: $gray;
+
   flexColumn(0);
-  background-color: $bgColor;
+  background-color: $codeBg;
   border-radius: 14px;
   // box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  box-shadow: $boxShadow;
   .header
     flexRow(.75rem);
     padding: 0 1rem;
@@ -33,14 +44,14 @@ $blue = #6cbdf0;
         display: flex;
         border-radius: 50%;
         &.red
-          background-color: #ed614e;
+          background-color: $appIconRed;
         &.yellow
-          background-color: #e0b443;
+          background-color: $appIconYellow;
         &.green
-          background-color: #54cc78;
+          background-color: $appIconGreen;
     .name
       font-size: .66rem;
-      color: darken(white, 30);
+      color: $codeFg;
       padding: .25rem 0rem
   .editor
     flexRow(.5rem);
@@ -49,18 +60,20 @@ $blue = #6cbdf0;
       font-size: .66rem;
       line-height: 1.54;
       white-space: break-spaces;
-      color: lighten($bgColor, 20);
+      color: $codeBg;
       width: 3ch;
       padding: .25rem .5rem;
       cursor: default;
+      color: $codeCommentsFg;
     .code
       flex: 1;
-      color: white;
+      color: $codeFg;
       font-size: .75rem;
       font-weight: 600;
       line-height: 1.35;
       padding: 0.25rem 1.5rem 0.25rem 0.5rem;
       background-color: unset;
+      box-shadow: none;
       .chunk
         &.red
           color: $red;
@@ -74,7 +87,13 @@ $blue = #6cbdf0;
           color: $white;
         &.gray
           color: $gray;
+        &.grayLight
+          color: $grayLight;
         &.blue
           color: $blue;
+        &.blueDark
+          color: $blueDark;
+        &.green
+          color: $green;
         &.thin
           font-weight: 400;
