--- a/vis/src/components/Cluster/BaseCluster.scss
+++ b/vis/src/components/Cluster/BaseCluster.scss
@@ -14,6 +14,7 @@
   padding: 2em;
   border-radius: 8px;
   background-color: var(--clr-card-bg);
+  color: var(--clr-fg);
   column-gap: 2em;
   row-gap: 1em;
   grid-template-areas:
@@ -40,7 +41,6 @@
     ;
     place-content: start;
     place-items: start;
-    /* color: rgb(63, 130, 63); */
     h2 {
       grid-area: title;
       display: flex;
