--- a/vis/src/components/Cluster/FileListing.scss
+++ b/vis/src/components/Cluster/FileListing.scss
@@ -1,7 +1,7 @@
 .files {
   grid-area: files;
   max-height: 400px;
-  overflow-y: scroll;
+  // overflow-y: scroll;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
