--- a/vis/src/components/Cluster/TypeIcon.scss
+++ b/vis/src/components/Cluster/TypeIcon.scss
@@ -14,19 +14,18 @@
     color: white;
     bottom: 1.25rem;
     left: .5rem;
-    z-index: 10;
     background-color: gray;
     font-size: 0.75rem;
     padding: .25rem .5rem;
     border-radius: 4px;
-    opacity: 0;
+    // opacity: 0;
     // display: none;
-    // visibility: hidden;
+    visibility: hidden;
   
     &.visible {
       // z-index: 10;
-      opacity: 1;
-      // visibility: visible;
+      // opacity: 1;
+      visibility: visible;
     }
   }
 }
