--- a/docs/src/vars.styl
+++ b/docs/src/vars.styl
@@ -6,7 +6,13 @@ clrCardBg ?= #39393A
 clrCardFg ?= #E6E6E6
 clrAccent ?= #ff0000
 
-fontRegular = 'Source Sans Pro', sans-serif
+// fontRegular = 'Source Sans Pro', sans-serif
+// fontRegular = 'Golos Text', sans-serif
+fontRegular = 'Noto Sans', sans-serif
+// fontRegular = 'Work Sans', sans-serif
+// fontTitle = 'Inconsolata', sans-serif
+fontTitle = 'Exo 2', sans-serif
+// fontRegular = 'Mullish', sans-serif
 fontMono = 'Ubuntu Mono', monospace
 
 gapXXLarge = 64px;
@@ -37,3 +43,7 @@ $gray = #606060;
 $grayLight = #a0a0a0;
 $blue = #6cbdf0;
 $blueDark = #4b83bf;
+
+$accent = hsl(195deg 88% 33%);
+
+$borderRadius = 12px;
