--- a/docs/src/App.styl
+++ b/docs/src/App.styl
@@ -45,14 +45,19 @@ main
         &:hover
           background-color: lighten(clrHeaderBg, 15);
   section
-    flexColumn(gapMedium)
+    flexColumn(gapLarge)
     max-width: sectionMaxWidth;
     min-width: sectionMinWidth;
+    padding: gapMedium;
     width: 80vw;
     &.bleed
       max-width: 100vw;
       width: 100vw;
       margin: 0;
+      padding: 0;
+    h2 
+      font-family: fontTitle;
+      font-size: 2rem;
     ul
       flexColumn()
       flex: 1;
